test/errors/invalid_plus.luv
# RET: 1
# ERR: {self}:5:11:    x = 4 + range(3)
# ERR: {ssss}                ^ error: Cannot add i32 to Range
def int main():
    x = 4 + range(3)
